--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mesto Russia</title>
+    <title>Место</title>
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="page">
@@ -16,7 +16,7 @@
       />
     </header>
     <main>
-      <section class="pop-up">
+      <section class="pop-up popup_opened">
         <div class="edit-form">
           <h2 class="edit-form__title">Редактировать профиль</h2>
           <input
@@ -40,15 +40,12 @@
           class="profile__avatar"
         />
         <div class="profile__info">
-          <div>
-            <h2 class="profile__name">Жак-Ив Кусто</h2>
-            <button class="edit-button"></button>
-          </div>
+          <h2 class="profile__name">Жак-Ив Кусто</h2>
+          <button class="edit-button"></button>
           <p class="profile__description">Исследователь океана</p>
         </div>
         <button class="add-button"></button>
       </section>
-
       <section class="elements">
         <article class="element">
           <img
