--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       />
     </header>
     <main>
-      <section class="pop-up popup_opened">
+      <section class="pop-up pop-up_opened">
         <div class="edit-form">
           <h2 class="edit-form__title">Редактировать профиль</h2>
           <input
@@ -53,8 +53,10 @@
             alt="Сентинский храм в горах на фоне изумрудного леса"
             class="element__image"
           />
-          <h3 class="element__name">Карачаевск</h3>
-          <button class="like-button"></button>
+          <div class="element__name-container">
+            <h3 class="element__name">Карачаевск</h3>
+            <button class="like-button"></button>
+          </div>
         </article>
         <article class="element">
           <img
@@ -62,8 +64,10 @@
             alt="Эльбрус на закате"
             class="element__image"
           />
-          <h3 class="element__name">Гора Эльбрус</h3>
-          <button class="like-button"></button>
+          <div class="element__name-container">
+            <h3 class="element__name">Гора Эльбрус</h3>
+            <button class="like-button"></button>
+          </div>
         </article>
         <article class="element">
           <img
@@ -71,8 +75,10 @@
             alt="Горы и леса Донбая"
             class="element__image"
           />
-          <h3 class="element__name">Домбай</h3>
-          <button class="like-button"></button>
+          <div class="element__name-container">
+            <h3 class="element__name">Домбай</h3>
+            <button class="like-button"></button>
+          </div>
         </article>
         <article class="element">
           <img
@@ -80,8 +86,10 @@
             alt="Российская академия наук, Москва"
             class="element__image"
           />
-          <h3 class="element__name">Российская академия наук</h3>
-          <button class="like-button"></button>
+          <div class="element__name-container">
+            <h3 class="element__name">Российская академия наук</h3>
+            <button class="like-button"></button>
+          </div>
         </article>
         <article class="element">
           <img
@@ -89,8 +97,10 @@
             alt="Здание посольства США, Будапешт"
             class="element__image"
           />
-          <h3 class="element__name">Посольство США</h3>
-          <button class="like-button"></button>
+          <div class="element__name-container">
+            <h3 class="element__name">Посольство США</h3>
+            <button class="like-button"></button>
+          </div>
         </article>
         <article class="element">
           <img
@@ -98,8 +108,10 @@
             alt="Вид на Будапешт с высоты"
             class="element__image"
           />
-          <h3 class="element__name">Будапешт</h3>
-          <button class="like-button"></button>
+          <div class="element__name-container">
+            <h3 class="element__name">Будапешт</h3>
+            <button class="like-button"></button>
+          </div>
         </article>
       </section>
     </main>
