--- a/index.html
+++ b/index.html
@@ -16,35 +16,18 @@
       />
     </header>
     <main>
-      <section class="pop-up pop-up_opened">
-        <div class="edit-form">
-          <h2 class="edit-form__title">Редактировать профиль</h2>
-          <input
-            type="text"
-            placeholder="Жак-Ив Кусто"
-            class="edit-form__name"
-          />
-          <input
-            type="text"
-            placeholder="Исследователь океана"
-            class="edit-form__description"
-          />
-          <button class="submit-button">Сохранить</button>
-          <button class="close-button"></button>
-        </div>
-      </section>
       <section class="profile">
         <img
           src="./images/profile__avatar.jpg"
-          alt=""
+          alt="Фото профиля"
           class="profile__avatar"
         />
         <div class="profile__info">
-          <h2 class="profile__name">Жак-Ив Кусто</h2>
-          <button class="edit-button"></button>
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <button class="profile__edit-button" type="button"></button>
           <p class="profile__description">Исследователь океана</p>
         </div>
-        <button class="add-button"></button>
+        <button class="profile__add-button" type="button"></button>
       </section>
       <section class="elements">
         <article class="element">
@@ -54,8 +37,8 @@
             class="element__image"
           />
           <div class="element__name-container">
-            <h3 class="element__name">Карачаевск</h3>
-            <button class="like-button"></button>
+            <h2 class="element__name">Карачаевск</h2>
+            <button class="element__like-button" type="button"></button>
           </div>
         </article>
         <article class="element">
@@ -65,8 +48,8 @@
             class="element__image"
           />
           <div class="element__name-container">
-            <h3 class="element__name">Гора Эльбрус</h3>
-            <button class="like-button"></button>
+            <h2 class="element__name">Гора Эльбрус</h2>
+            <button class="element__like-button" type="button"></button>
           </div>
         </article>
         <article class="element">
@@ -76,8 +59,8 @@
             class="element__image"
           />
           <div class="element__name-container">
-            <h3 class="element__name">Домбай</h3>
-            <button class="like-button"></button>
+            <h2 class="element__name">Домбай</h2>
+            <button class="element__like-button" type="button"></button>
           </div>
         </article>
         <article class="element">
@@ -87,8 +70,8 @@
             class="element__image"
           />
           <div class="element__name-container">
-            <h3 class="element__name">Российская академия наук</h3>
-            <button class="like-button"></button>
+            <h2 class="element__name">Российская академия наук</h2>
+            <button class="element__like-button" type="button"></button>
           </div>
         </article>
         <article class="element">
@@ -98,8 +81,8 @@
             class="element__image"
           />
           <div class="element__name-container">
-            <h3 class="element__name">Посольство США</h3>
-            <button class="like-button"></button>
+            <h2 class="element__name">Посольство США</h2>
+            <button class="element__like-button" type="button"></button>
           </div>
         </article>
         <article class="element">
@@ -109,8 +92,8 @@
             class="element__image"
           />
           <div class="element__name-container">
-            <h3 class="element__name">Будапешт</h3>
-            <button class="like-button"></button>
+            <h2 class="element__name">Будапешт</h2>
+            <button class="element__like-button" type="button"></button>
           </div>
         </article>
       </section>
@@ -118,5 +101,26 @@
     <footer class="footer">
       <p class="footer__copyright">© 2020 Mesto Russia Golkov Artem</p>
     </footer>
+    <section class="pop-up pop-up_opened">
+      <div class="pop-up__container">
+        <form name="submit-form" class="form">
+          <h2 class="pop-up__title">Редактировать профиль</h2>
+          <input
+            name="name-form"
+            type="text"
+            placeholder="Жак-Ив Кусто"
+            class="pop-up__input"
+          />
+          <input
+            name="description-form"
+            type="text"
+            placeholder="Исследователь океана"
+            class="pop-up__input"
+          />
+          <button class="pop-up__submit-button" type="submit">Сохранить</button>
+          <button class="pop-up__close-button" type="button"></button>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
