global fix after merging

--- a/index.html
+++ b/index.html
@@ -32,74 +32,7 @@
         </div>
         <button class="add-button"></button>
       </section>
-      <section class="elements">
-        <!-- <article class="element">
-          <img
-            src="./images/karachaevsk.jpg"
-            alt="Сентинский храм в горах на фоне изумрудного леса"
-            class="element__image"
-          />
-          <div class="element__name-container">
-            <h3 class="element__name">Карачаевск</h3>
-            <button class="like-button"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img
-            src="./images/elbrus.jpg"
-            alt="Эльбрус на закате"
-            class="element__image"
-          />
-          <div class="element__name-container">
-            <h3 class="element__name">Гора Эльбрус</h3>
-            <button class="like-button"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img
-            src="./images/dombai.jpg"
-            alt="Горы и леса Донбая"
-            class="element__image"
-          />
-          <div class="element__name-container">
-            <h3 class="element__name">Домбай</h3>
-            <button class="like-button"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img
-            src="./images/RAN.jpg"
-            alt="Российская академия наук, Москва"
-            class="element__image"
-          />
-          <div class="element__name-container">
-            <h3 class="element__name">Российская академия наук</h3>
-            <button class="like-button"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img
-            src="./images/embassyUSA.jpg"
-            alt="Здание посольства США, Будапешт"
-            class="element__image"
-          />
-          <div class="element__name-container">
-            <h3 class="element__name">Посольство США</h3>
-            <button class="like-button"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img
-            src="./images/budapesht.jpg"
-            alt="Вид на Будапешт с высоты"
-            class="element__image"
-          />
-          <div class="element__name-container">
-            <h3 class="element__name">Будапешт</h3>
-            <button class="like-button"></button>
-          </div>
-        </article>  -->
-      </section>
+      <section class="elements"></section>
     </main>
     <footer class="footer">
       <p class="footer__copyright">© 2020 Mesto Russia Golkov Artem</p>
