--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2 class="edit-form__title">Редактировать профиль</h2>
         <form required action="#" class="edit-form__form">
           <input
-            value="Жак-Ив Кусто"
+            value=""
             type="text"
             placeholder="Жак-Ив Кусто"
             class="edit-form__name"
@@ -51,7 +51,7 @@
             required
           />
           <input
-            value="Исследователь океана"
+            value=""
             type="text"
             placeholder="Исследователь океана"
             class="edit-form__description"
@@ -69,7 +69,7 @@
         <h2 class="edit-form__title">Новое место</h2>
         <form required action="#" class="edit-form__form">
           <input
-            value="Название"
+            value=""
             placeholder="Название"
             type="text"
             class="edit-form__name"
@@ -77,7 +77,7 @@
             required
           />
           <input
-            value="Ссылка на картинку"
+            value=""
             placeholder="Ссылка на картинку"
             type="text"
             class="edit-form__description"
@@ -90,7 +90,7 @@
       </div>
     </section>
     <!-- full iamge pop-up -->
-    <section class="pop-up" id="full-image">
+    <section class="pop-up pop-up_opened-image" id="full-image">
       <figure class="pop-up__figure">
         <button class="close-button" id="close-full-image"></button>
         <img src="#" class="pop-up__full-image" />
