refactor: better UX, now we get user info from server only once, changeButtonState is now in utils.js. fix: removed submit button padding and margin-top, now confirm delete pop up has accurate margins

--- a/src/index.html
+++ b/src/index.html
@@ -189,7 +189,9 @@
 		<!-- pop-up user-profile-pic -->
 		<section class="pop-up" id="confirm-delete-pop-up">
 			<div class="edit-form">
-				<h2 class="edit-form__title">Вы увверены?</h2>
+				<h2 class="edit-form__title edit-form__title_type_confirm-delete">
+					Вы уверены?
+				</h2>
 				<button class="submit-button" id="confirm-delete-button" type="submit">
 					Да
 				</button>
